Changed widget id

--- a/conv_test/index.html
+++ b/conv_test/index.html
@@ -13,9 +13,10 @@
           };
       </script>-->
       <!-- Brevo Conversations {literal} -->
+      <!-- Brevo Conversations {literal} -->
       <script>
           (function(d, w, c) {
-              w.BrevoConversationsID = '6622847f14a1da715c659e47';
+              w.BrevoConversationsID = '6690f4f18df9cc57801090b5';
               w[c] = w[c] || function() {
                   (w[c].q = w[c].q || []).push(arguments);
               };
@@ -25,6 +26,7 @@
               if (d.head) d.head.appendChild(s);
           })(document, window, 'BrevoConversations');
       </script>
+<!-- /Brevo Conversations {/literal} -->
       <!-- /Brevo Conversations {/literal} -->
     <!-- Chatra {literal} -->
 <!--    <script>
