changed widget code

--- a/conv_test/index.html
+++ b/conv_test/index.html
@@ -15,13 +15,15 @@
       <!-- Brevo Conversations {literal} -->
       <script>
           (function(d, w, c) {
-              w.BrevoConversationsID = '6622847f14a1da715c659e47';
+              w.BrevoConversationsID = '666c6020112b18562830adb6';
+              w.BrevoConversationsProtocol = 'http:';
+              w.BrevoConversationsHost = 'localhost:2223';
               w[c] = w[c] || function() {
                   (w[c].q = w[c].q || []).push(arguments);
               };
               var s = d.createElement('script');
               s.async = true;
-              s.src = 'https://conversations-widget.brevo.com/brevo-conversations.js';
+              s.src = 'http://localhost:8001/dist/brevo-conversations.dev.js';
               if (d.head) d.head.appendChild(s);
           })(document, window, 'BrevoConversations');
       </script>
