added a chat widget code

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chat widget test</title>
+      <!-- Brevo Conversations {literal} -->
+      <script>
+          (function(d, w, c) {
+              w.BrevoConversationsID = '6622847f14a1da715c659e47';
+              w[c] = w[c] || function() {
+                  (w[c].q = w[c].q || []).push(arguments);
+              };
+              var s = d.createElement('script');
+              s.async = true;
+              s.src = 'https://conversations-widget.brevo.com/brevo-conversations.js';
+              if (d.head) d.head.appendChild(s);
+          })(document, window, 'BrevoConversations');
+      </script>
+      <!-- /Brevo Conversations {/literal} -->
       <script type="text/javascript">
           (function() {
               window.sib = {
